# agent-assembly-examples

./: README.md
.claude/: CLAUDE.md
.claude/skills/sdk-version-bump/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-assign.yml  codeql.yml  example-metadata-check.yml  proof-html.yml  verify-all-samples.yml  verify-go.yml  verify-node.yml  verify-python.yml  verify-scenarios.yml
docs/: choosing-an-example.md  concepts.md
go/: README.md
go/basic-agent/: README.md  go.mod  main.go  main_test.go
go/cli-runtime-integration/: README.md  go.mod  go.sum  main.go  policy.go
go/cli-runtime-integration/scripts/: run-with-aasm.sh
go/langchaingo/: README.md  go.mod  go.sum  main_test.go
go/tool-policy/: README.md  go.mod  main.go  policy.go
metadata/: framework-labels.json
node/: README.md
node/custom-tool-policy/: README.md  package.json  pnpm-lock.yaml
node/custom-tool-policy/src/: index.ts
node/langchain-js-basic-agent/: README.md  package.json
node/langchain-js-basic-agent/src/: index.ts  policy.ts
node/langchain-js-basic-agent/tests/: smoke.test.ts  with-assembly.test.ts
node/langgraph-js/: package.json  pnpm-lock.yaml
node/langgraph-js/src/: graph.ts  tools.ts
node/mastra/: .env.example  README.md  package.json  pnpm-lock.yaml
node/openai-node-tool-policy/: README.md  package.json  pnpm-lock.yaml
node/vercel-ai/: .env.example  README.md  package.json  pnpm-lock.yaml
python/: README.md
python/agno-tool-policy/: README.md  pyproject.toml
python/autogen-tool-policy/: README.md
python/crewai-research-crew/: README.md  pyproject.toml
python/custom-tool-policy/: README.md  pyproject.toml
python/google-adk/: .env.example  README.md  pyproject.toml
python/haystack-tool-policy/: README.md  pyproject.toml
python/langchain-basic-agent/: README.md  pyproject.toml
python/langchain-research-agent/: .env.example  README.md  pyproject.toml
python/langgraph/: .env.example  README.md  pyproject.toml
python/llamaindex-tool-policy/: README.md  pyproject.toml
python/microsoft-agent-framework-tool-policy/: .env.example  README.md  pyproject.toml
python/openai-agents-sdk/: README.md  pyproject.toml
python/pydantic-ai/: .env.example  README.md  pyproject.toml
python/semantic-kernel-tool-policy/: README.md  pyproject.toml
python/semantic-kernel-tool-policy/src/: main.py
python/smolagents-tool-policy/: README.md  pyproject.toml
python/strands-agents-tool-policy/: README.md
scenarios/: README.md
scenarios/approval-gates/: README.md  expected-output.txt
scenarios/budget-limits/: README.md  policy.yaml
scenarios/live-core-enforcement/: README.md  docker-compose.yml  policy.yaml
scenarios/policy-enforcement/: README.md
scenarios/sidecar-runtime/: README.md  docker-compose.yml
scripts/: extract_snippets.py  generate_example_metadata.py  test_generate_example_metadata.py
snippets/: README.md  manifest.json
snippets/node/: custom-tool-policy.ts  langchain-js-basic-agent.ts  langgraph-js.ts  mastra.ts  openai-node-tool-policy.ts  vercel-ai.ts
snippets/python/: agno-tool-policy.py  autogen-tool-policy.py  crewai-research-crew.py  custom-tool-policy.py  google-adk.py  haystack-tool-policy.py  langchain-basic-agent.py  langchain-research-agent.py  langgraph.py  llamaindex-tool-policy.py  microsoft-agent-framework-tool-policy.py  openai-agents-sdk.py  pydantic-ai.py  semantic-kernel-tool-policy.py  smolagents-tool-policy.py  strands-agents-tool-policy.py
verification-reports/: AAASM-2195.md  AAASM-2253.md  AAASM-2262-verify-python-examples.md  AAASM-2272.md
(+77 files in other folders)
