[project]
name = "semantic-kernel-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with Microsoft Semantic Kernel"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    # Semantic Kernel has no native Agent Assembly adapter (it is distinct from
    # the Microsoft Agent Framework, which does), so this example governs its
    # real `KernelFunction` calls the framework-agnostic way (the same path the
    # `custom-tool-policy` example uses).
    "semantic-kernel>=1.39.4",
    # semantic-kernel >=1.39.4 (the version that remediates GHSA critical alerts
    # #28/#29) declares pre-release-only transitive deps: azure-ai-agents>=1.2.0b3
    # and azure-ai-projects~=1.0.0b12. uv only accepts a pre-release when the
    # package is a *direct* requirement carrying a pre-release specifier, so these
    # two are listed here purely to unlock that resolution. This example never
    # imports them; scoping the pre-release allowance to exactly these packages
    # keeps everything else (notably `mcp`) on stable releases.
    "azure-ai-agents>=1.2.0b3",
    "azure-ai-projects>=1.0.0b12",
    # Direct floor to pull the patched mcp (GHSA-vj7q-gjh5-988w, fixed
    # 1.28.1); semantic-kernel only floors mcp>=1.26.0 so the transitive
    # otherwise resolves to a vulnerable 1.27.x. Example runs no mcp
    # WebSocket server, but pin it patched regardless.
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
